--- a/style.css
+++ b/style.css
@@ -284,6 +284,9 @@ button:hover span:nth-child(2) {
   header h1{
     font-size: 2rem;
   }
+  .title img{
+    width: 100vw;
+  }
   .title-text h2{
     font-size: 1.2rem;
     padding: 3px;
@@ -296,7 +299,7 @@ button:hover span:nth-child(2) {
     display: flex;
     flex-direction: column;
     padding: 10px;
-    margin-bottom: 170px;
+    margin-bottom: 250px;
 
   }
   .first-section .write-up{
@@ -349,6 +352,9 @@ button:hover span:nth-child(2) {
   .third-section .three{
     margin-bottom: 20px;
   }
+  .third-section .three{
+    margin-bottom: 80px;
+  }
   .fourth-section {
     display: flex;
     flex-direction: column-reverse;
@@ -387,6 +393,7 @@ button:hover span:nth-child(2) {
     background-color: rgba(0, 0, 0, 0);
   }
   .sixth-section img{
+    width: 100vw;
     height: 550px;
   }
   .sixth-section .content .content-1{
